Implement loading protests out of the db