@@ -47,7 +47,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.12.0'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
 }
 
 task copyVersionInfo(type: Copy) {
@@ -101,6 +101,11 @@ classes {
 compileJava {
     dependsOn yarn_build, copyNpmAssets
     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 }
 
 yarn_build {
